<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClassesDetailsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    <CheckBox
        android:id="@+id/check_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="144dp"
        android:text="sun"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_days_label" />

    <CheckBox
        android:id="@+id/check_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="96dp"
        android:text="sat"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_days_label" />

    <CheckBox
        android:id="@+id/check_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="TUE"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_days_label" />

    <CheckBox
        android:id="@+id/check_thursday"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="48dp"
        android:text="thu"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_days_label" />

    <CheckBox
        android:id="@+id/check_friday"
        android:layout_width="66dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:text="fri"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_days_label" />

    <CheckBox
        android:id="@+id/check_wednesday"
        android:layout_width="68dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="wed"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_days_label" />

    <EditText
        android:id="@+id/end_time_input"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginTop="164dp"
        android:hint="##:##"
        android:inputType="time"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText


        android:id="@+id/course_name_input"
        android:layout_width="295dp"
        android:layout_height="49dp"
        android:layout_marginTop="68dp"
        android:hint="Department Name and course #"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_name_label"
        android:layout_width="114dp"
        android:layout_height="26dp"
        android:text="Course Name"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <EditText
        android:id="@+id/start_time_input"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="164dp"
        android:hint="##:##"
        android:inputType="time"
        android:textAlignment="viewStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/am_pm_start"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:text="AM"
        app:layout_constraintEnd_toEndOf="@+id/start_time_input"
        app:layout_constraintTop_toBottomOf="@+id/start_time_input" />

    <Switch
        android:id="@+id/am_pm_end"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:text="AM"
        app:layout_constraintEnd_toEndOf="@+id/end_time_input"
        app:layout_constraintTop_toBottomOf="@+id/end_time_input" />

    <TextView
        android:id="@+id/text_connect_to"
        android:layout_width="48dp"
        android:layout_height="19dp"
        android:layout_marginTop="64dp"
        android:text="To"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/end_time_input"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/start_time_input"
        app:layout_constraintTop_toBottomOf="@+id/course_name_input" />

    <TextView
        android:id="@+id/start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:text="Start Time"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name_input" />

    <TextView
        android:id="@+id/end_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:text="End Time"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name_input" />

    <TextView
        android:id="@+id/course_days_label"
        android:layout_width="99dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:text="Day(s)"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/am_pm_start"
        app:layout_constraintVertical_bias="0.107" />

    <CheckBox
        android:id="@+id/check_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Mon"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_days_label" />

    <TextView
        android:id="@+id/credits_label"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="48dp"
        android:text="Credits"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/am_pm_end" />

    <EditText
        android:id="@+id/credits_input"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:height="48dp"
        android:ems="10"
        android:hint="Enter # of Credits"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/credits_label" />


    <EditText
        android:id="@+id/course_location_input"
        android:layout_width="217dp"
        android:layout_height="48dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="Enter Location Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/location_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/location_label"
        android:layout_width="139dp"
        android:layout_height="39dp"
        android:layout_marginBottom="104dp"
        android:text="Location"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_course_details"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_location_input" />

    <RadioGroup
        android:layout_width="158dp"
        android:layout_height="96dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credits_input">

        <RadioButton
            android:id="@+id/radio_fall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fall Semester" />

        <RadioButton
            android:id="@+id/radio_spring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Spring Semester" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>