<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:description="@string/menu_description"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/Item1"
        android:icon="@drawable/baseline_arrow_drop_up_24"
        android:title="item1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/MonthlyView"
        android:title="Monthly View"
        app:showAsAction="never" />

    <item
        android:id="@+id/WeeklyView"
        android:title="Weekly View"
        app:showAsAction="never"/>

    <item
        android:id="@+id/DailyView"
        android:title="Daily View"
        app:showAsAction="never"/>

</menu>