...

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="Home" />
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/baseline_person_24"
        android:title="User" />
    <item
        android:id="@+id/journey"
        android:icon="@drawable/baseline_explore_24"
        android:title="Journey" />
    <item
        android:id="@+id/friends"
        android:icon="@drawable/baseline_group_24"
        android:title="Friends" />
...
